syntax = "proto3";

package subtivity.v1;

message Counters {
  repeated Counter counters = 1;
}

message Counter {
  string key = 1;
  int64 value = 2;
}

message BlockStats {
  int64 traces_count = 1;                  // number of successfully executed transactions in this block
  int64 action_count = 2;                  // number of successfully executed actions in this block
  repeated string uaw = 3;                 // list of unique active wallets in this block
}